@@ -97,6 +97,8 @@ Release 0.9.0 - unreleased
 
   BUG FIXES
 
+    TAJO-952: Wrong default partition volume config. (Mai Hai Thanh via jihoon)
+
     TAJO-974: Eliminate unexpected case condition in SubQuery. (Hyoungjun Kim 
     via hyunsik) 
 
